--- a/3_spectral_graph_theory.ipynb
+++ b/3_spectral_graph_theory.ipynb
@@ -604,7 +604,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your answer here.**"
+    "***Graph embeddings provide a mapping from a network to a vector space while preserving all important properties from the network. It maps high dimension data points to lower dimension points and preserves the similarities. This means that similar points are embedded close to each other.***\n",
+    "\n",
+    "***In general, we use graph embeddings in order to represent a graph in a vector space of a certain dimension.***"
    ]
   },
   {
@@ -743,7 +745,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your answer here.**"
+    "***The embedding $Z$ will preserve the number of nodes, and their connectivity, as it is a smooth function over the original graph : connectivity between nodes is governed by the proximity of neighboring points. The points close to each other are mapped close to each other in the low-dimensional space, preserving local distances.***"
    ]
   },
   {
@@ -769,7 +771,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your answer here.**"
+    "***As seen in class, we want to choose $k$, which is the number of clusters, such that the eigenvalues $\\lambda_{1}, ..., \\lambda_{k}$ are small but $\\lambda_{k+1}$ is larger, since if data has $k$ clear clusters, there will be a gap in the Laplacian spectrum bewteen $\\lambda_{k}$ and $\\lambda_{k+1}$. A way to find $k$ is to look a the multiplicity of the eigenvalue $0$. Finally once we have chosen $k$, we can take $d$ to be equal to the number of clusters $k$, as suggested by the spectral clustering algorithm seen during the lectures.***"
    ]
   },
   {
@@ -845,7 +847,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 12\n",
+    "# Question 12\n",
     "\n",
     "Use the computed cluster assignment to reorder the adjacency matrix $A$.\n",
     "What do you expect? What do you observe?"
