--- a/3_spectral_graph_theory.ipynb
+++ b/3_spectral_graph_theory.ipynb
@@ -266,15 +266,10 @@
    "source": [
     "***The incidence matrix $S$ satisfies $SS^T = L$.***\n",
     "\n",
-    "***Hence the eigendecomposition of L gives us :\n",
-    "$$\\begin{equation}\n",
-    "\\begin{aligned}\n",
-    "λ_k &= u_k^TLu_{k} \\\\\n",
-    "&= u_{k}^TSS^Tu_{k} \\\\ \n",
-    "&= (S^Tu_{k})^T(S^Tu_{k}) \\\\\n",
-    "&= \\| S^T u_k \\|_2^2 \n",
-    "\\end{aligned}\n",
-    "\\end{equation}$$***\n",
+    "***Hence the eigendecomposition of L gives us :***\n",
+    "\n",
+    "$λ_k = u_k^TLu_{k} = u_{k}^TSS^Tu_{k} = (S^Tu_{k})^T(S^Tu_{k}) = \\| S^T u_k \\|_2^2$\n",
+    "\n",
     "\n",
     "***Where the third equality is optained since $(AB)^\\top = B^\\top A^\\top$***"
    ]
@@ -878,6 +873,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***What we expect when reordering with respect to the cluster assigment is to see the communities in our graph. This should be observable on the adjacency matrix since after reordering, each cluster should have many edges between them and so we should see squares appear for each of those clusters on the reordered adjacency matrix.***\n",
+    "\n",
+    "***Outside of the clusters (the squares in the adjacency matrix), we should still see some points since the clusters may be connected between them by a few edges. But again, here, what we should mainly see are those squares on the diagonal representing the different clusters.***\n",
+    "\n",
+    "(Note that the squares will be clearly visible if the clusters are very connected inside them, and poorly connected to other clusters. Otherwise, it may be hard to see the squares.)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 168,
    "metadata": {},
@@ -950,7 +956,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Your answer here.**"
+    "***After reordering, we don't see clearly the squares representing the two clusters, but it seems that one of the cluster goes from indices 0 to ~2300, and the other one from ~2300 until the end.***\n",
+    "\n",
+    "***The fact that it is hard to clearly see may be due, as explained before, to the fact that even if we have communities, they may actually not be highly connected inside them.***"
    ]
   },
   {
@@ -975,7 +983,7 @@
     "***Going through our clusters, we notice than most nodes in a same cluster are located in the same country/region excepted few exceptions. For instance, the smallest cluster is mostly composed of hydrobases located in Alaska wich are very likely to form a community. Since they are hydrobases, it makes sense that the big regular american airports aren't in this cluster.\n",
     "With this intuition, we could conclude that the clusters we got from the Fiedler vector make sense.***\n",
     "\n",
-    "***It will be a lot easier to see that if we could actually display the airport and their cluster assignment on a world map.***"
+    "***It is very hard to say right now since there are no clear labels, and we are sure that it will be a lot easier to see if we could actually display the airports and their cluster assignment on a world map.***"
    ]
   },
   {
