--- a/3_spectral_graph_theory.ipynb
+++ b/3_spectral_graph_theory.ipynb
@@ -268,7 +268,7 @@
     "\n",
     "***Hence the eigendecomposition of L gives us :***\n",
     "\n",
-    "$λ_k = u_k^TLu_{k} = u_{k}^TSS^Tu_{k} = (S^Tu_{k})^T(S^Tu_{k}) = \\| S^T u_k \\|_2^2$\n",
+    "$\\lambda_k = u_k^TLu_{k} = u_{k}^TSS^Tu_{k} = (S^Tu_{k})^T(S^Tu_{k}) = \\| S^T u_k \\|_2^2$\n",
     "\n",
     "\n",
     "***Where the third equality is optained since $(AB)^\\top = B^\\top A^\\top$***"
