--- a/3_spectral_graph_theory.ipynb
+++ b/3_spectral_graph_theory.ipynb
@@ -271,7 +271,7 @@
     "$\\lambda_k = u_k^TLu_{k} = u_{k}^TSS^Tu_{k} = (S^Tu_{k})^T(S^Tu_{k}) = \\| S^T u_k \\|_2^2$\n",
     "\n",
     "\n",
-    "***Where the third equality is optained since $(AB)^\\top = B^\\top A^\\top$***"
+    "***Where the third equality is obtained since $(AB)^\\top = B^\\top A^\\top$***"
    ]
   },
   {
@@ -405,7 +405,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***For the combinatorial Laplacian, it looks like the eigenvalues are growing exponentially, and they are bounded by 250.***\n",
+    "***For the combinatorial Laplacian, it looks like the eigenvalues are growing exponentially, and they are bounded by $250$.***\n",
     "\n",
     "***For the normalized Laplacian, the eigenvalues are bounded by $2$, and it looks like it is symmetric. If eigenvalue $\\lambda_i$ is there, then it seems that we will also have $2-\\lambda_i$. We also note that many eigenvalues have value $1$.***"
    ]
