--- a/4_graph_signal_processing.ipynb
+++ b/4_graph_signal_processing.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 5,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -201,10 +201,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x7fec3d9ec710>"
+       "<matplotlib.collections.PathCollection at 0x7fa5ff276128>"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -280,10 +280,10 @@
    "outputs": [],
    "source": [
     "def GFT(x):\n",
-    "    return # Your code here.\n",
+    "    return np.conjugate(U) @ x\n",
     "\n",
     "def iGFT(x):\n",
-    "    return # Your code here."
+    "    return U @ x"
    ]
   },
   {
@@ -304,7 +304,7 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here."
+    "nx.draw_networkx_nodes(graph, coords, node_size=60, node_color=labels)"
    ]
   },
   {
@@ -323,7 +323,15 @@
    },
    "outputs": [],
    "source": [
-    "# Your code here."
+    "# Compute the GFT of labels and take absolute value\n",
+    "abs_gft = np.abs(GFT(labels))\n",
+    "\n",
+    "# Plot the signal as a function of the eigenvalues\n",
+    "plt.plot(x=e, y=abs_gft)\n",
+    "plt.xlabel('Eigenvalues')\n",
+    "plt.ylabel('Absolute value of the GFT of the labels signal')\n",
+    "plt.title('Absolute value of the GFT of the labels signal as a function of the eigenvalues')\n",
+    "plt.show()"
    ]
   },
   {
@@ -377,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
     "inputHidden": false,
     "outputHidden": false
@@ -385,13 +393,13 @@
    "outputs": [],
    "source": [
     "def heat_kernel(e, t):\n",
-    "    return # Your code here.\n",
+    "    return np.exp(-t * e)\n",
     "\n",
     "def inverse_kernel(e, t):\n",
-    "    return # Your code here.\n",
+    "    return np.linalg.inv(np.eye(n_nodes) + t * laplacian) @ e\n",
     "\n",
     "def rectangle_kernel(e, l_min, l_max):\n",
-    "    return # Your code here.\n",
+    "    return np.bitwise_and(e <= l_max, e >= l_min).astype(float)\n",
     "\n",
     "def graph_filter(x, kernel, **kwargs):\n",
     "    return # Your code here."
