Part3 merged, Part4 WorkOnProgress

--- a/3_spectral_graph_theory.ipynb
+++ b/3_spectral_graph_theory.ipynb
@@ -54,7 +54,9 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%matplotlib inline"
@@ -70,7 +72,9 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -93,7 +97,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Load the adjacency matrix from previous milestone\n",
@@ -111,7 +117,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Set the diagonal elements to 0\n",
@@ -150,7 +158,9 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Compute the matrix D of degrees\n",
@@ -175,7 +185,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "laplacian = laplacian_combinatorial"
@@ -195,7 +207,9 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Compute all the eigenvalues and eigenvectors using eigh()\n",
@@ -524,7 +538,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def dfs(graph, node, visited):\n",
@@ -580,7 +596,9 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Compute the largest connected component\n",
@@ -601,7 +619,9 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Compute the matrix D of degrees\n",
@@ -618,7 +638,9 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "laplacian = laplacian_normalized"
@@ -668,7 +690,9 @@
   {
    "cell_type": "code",
    "execution_count": 185,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def compute_embedding_fiedler(laplacian, dim, normalized_eig=False):\n",
@@ -705,7 +729,9 @@
   {
    "cell_type": "code",
    "execution_count": 186,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "embedding_2d, fiedler_vector = compute_embedding_fiedler(laplacian, 2)"
@@ -822,7 +848,9 @@
   {
    "cell_type": "code",
    "execution_count": 165,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "nodes_embedded, fiedler_vector = compute_embedding_fiedler(laplacian, 2)"
@@ -838,7 +866,9 @@
   {
    "cell_type": "code",
    "execution_count": 166,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def compute_clustering(nodes, fiedler_vector):\n",
@@ -856,7 +886,9 @@
   {
    "cell_type": "code",
    "execution_count": 167,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cluster_assignment = compute_clustering(nodes_embedded, fiedler_vector)"
@@ -886,7 +918,9 @@
   {
    "cell_type": "code",
    "execution_count": 168,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def rearrange_adj_matrix(adj_matrix, cluster_assignment):\n",
@@ -922,7 +956,9 @@
   {
    "cell_type": "code",
    "execution_count": 169,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "rearranged = rearrange_adj_matrix(adjacency, cluster_assignment)  "
@@ -1064,7 +1100,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
